syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

service Game {
    rpc CreateGame (CreateGameRequest) returns (CreateGameResponse);
    rpc JoinGame (JoinGameRequest) returns (JoinGameResponse);
    rpc StartGame (StartGameRequest) returns (google.protobuf.Empty);
}

message CreateGameRequest {
    int32 maxPlayers = 1;
}

message CreateGameResponse {
    string game_id = 1;
}

message JoinGameRequest {
    string game_id = 1;
}

message JoinGameResponse {
    string assigned_player_id = 1;
}

message StartGameRequest {
    string game_id = 1;
}

